syntax = "proto3";

package ocr;

message ImageData {
  bytes content = 1;
  string filename = 2;
}

message OCRResult {
  string filename = 1;
  string extracted_text = 2;
  bool success = 3;
  string error_message = 4;
}

service OCRService {
  // Streaming RPC – client sends many images, server streams results back as they finish
  rpc ProcessImages (stream ImageData) returns (stream OCRResult);
}